--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </p>
     <hr>
     <p>
-    <strong class="important">Note:</strong> This site is the official version of 46368. You can play it on your phone via <a href="http://git.io/46368">http://git.io/46368.</a> All other apps or sites are derivatives or fakes, and should be used with caution.
+    <strong class="important">Note:</strong> This site is the official version of 46368. You can play it on your phone via <a href="https://numberblock13.github.io/46368">http://git.io/46368.</a> All other apps or sites are derivatives or fakes, and should be used with caution.
     </p>
     <hr>
     <p>
